test/spec_vectors/simd_i8x16_arith2/fail/module_23.wat
(module (func $i8x16.avgr_u-arg-empty (result v128) (i8x16.avgr_u)))